src/JazLabs/hardware/digHolo/digHolo_v1.0.0/Examples/Matlab/digHolo.h

typedef float complex64;
typedef float complex64[2];
#define DIGHOLO_ERROR_SUCCESS 0 
#define DIGHOLO_ERROR_ERROR 1 
#define DIGHOLO_ERROR_INVALIDHANDLE 2 
#define DIGHOLO_ERROR_NULLPOINTER 3 
#define DIGHOLO_ERROR_SETFRAMEBUFFERDISABLED 4 
#define DIGHOLO_ERROR_INVALIDDIMENSION 5 
#define DIGHOLO_ERROR_INVALIDPOLARISATION 6 
#define DIGHOLO_ERROR_INVALIDAXIS 7 
#define DIGHOLO_ERROR_INVALIDARGUMENT 8  
#define DIGHOLO_ERROR_MEMORYALLOCATION 9 
#define DIGHOLO_ERROR_FILENOTCREATED 10 
#define DIGHOLO_ERROR_FILENOTFOUND 11 
#define DIGHOLO_UNIT_PIXEL 1 
#define DIGHOLO_UNIT_LAMBDA 1 
#define DIGHOLO_AVGMODE_SEQUENTIAL 0 
#define DIGHOLO_AVGMODE_INTERLACED 1 
#define DIGHOLO_AVGMODE_SEQUENTIALSWEEP 2 
#define DIGHOLO_AVGMODE_COUNT 3 
#define DIGHOLO_WAVELENGTHORDER_INPUT 0  
#define DIGHOLO_WAVELENGTHORDER_OUTPUT 1  
#define DIGHOLO_WAVELENGTHORDER_FAST 0 
#define DIGHOLO_WAVELENGTHORDER_SLOW 1 
#define DIGHOLO_AUTOALIGNMODE_FULL 0		
#define DIGHOLO_AUTOALIGNMODE_TWEAK 1		
#define DIGHOLO_AUTOALIGNMODE_ESTIMATE 2	
#define DIGHOLO_AUTOALIGNMODE_COUNT 3		
#define DIGHOLO_BASISTYPE_HG 0 
#define DIGHOLO_BASISTYPE_LG 1 
#define DIGHOLO_BASISTYPE_CUSTOM 2 
#define DIGHOLO_METRIC_IL 0			
#define DIGHOLO_METRIC_MDL 1		
#define DIGHOLO_METRIC_DIAG 2		
#define DIGHOLO_METRIC_SNRAVG 3		
#define DIGHOLO_METRIC_DIAGBEST 4	
#define DIGHOLO_METRIC_DIAGWORST 5	
#define DIGHOLO_METRIC_SNRBEST 6	
#define DIGHOLO_METRIC_SNRWORST 7	
#define DIGHOLO_METRIC_SNRMG 8		
#define DIGHOLO_METRIC_COUNT 9		
#define DIGHOLO_ANALYSIS_TOTALPOWER 0 
#define DIGHOLO_ANALYSIS_COMX 1 
#define DIGHOLO_ANALYSIS_COMY 2 
EXT_C int digHoloConsoleRestore();
EXT_C int digHoloRunBatchFromConfigFile(char* filename);
EXT_C int digHoloConfigBackupSave(int handleIdx);
EXT_C int digHoloConfigBackupLoad(int handleIdx);
EXT_C void digHoloDebugRoutine(int handleIdx);
EXT_C  float* digHoloFrameSimulatorCreate(int frameCount, int* frameWidth, int* frameHeight, float* pixelSize, int* polCount,
	float** refTiltX, float** refTiltY, float** refDefocus, float** refWaist, float** refBeamCentreX, float** refBeamCentreY, complex64** refAmplitude,
	int* beamGroupCount, float** beamWaist, complex64** beamCoefs, float** beamCentreX, float** beamCentreY,
	int* cameraPixelLevelCount, int fillFactorCorrection, float** wavelengths, int* wavelengthCount, int wavelengthOrdering, int printToConsole, unsigned short** pixelBuffer16, const char* fname);
EXT_C  float* digHoloFrameSimulatorCreateSimple(int frameCount, int frameWidth, int frameHeight, float pixelSize, int polCount, float wavelength, int printToConsole);
EXT_C int digHoloFrameSimulatorDestroy(float* pixelBuffer);
EXT_C float** digHoloConfigGetZernCoefs(int handleIdx);
EXT_C int digHoloConfigGetZernCount(int handleIdx);