src/JazLabs/hardware/digHolo/digHolo_v1.0.0/src/digholoHeader.py


# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1952
for _lib in _libs.values():
    if not _lib.has("digHoloConsoleRestore", "cdecl"):
        continue
    digHoloConsoleRestore = _lib.get("digHoloConsoleRestore", "cdecl")
    digHoloConsoleRestore.argtypes = []
    digHoloConsoleRestore.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1962
for _lib in _libs.values():
    if not _lib.has("digHoloRunBatchFromConfigFile", "cdecl"):
        continue
    digHoloRunBatchFromConfigFile = _lib.get("digHoloRunBatchFromConfigFile", "cdecl")
    digHoloRunBatchFromConfigFile.argtypes = [String]
    digHoloRunBatchFromConfigFile.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1973
for _lib in _libs.values():
    if not _lib.has("digHoloConfigBackupSave", "cdecl"):
        continue
    digHoloConfigBackupSave = _lib.get("digHoloConfigBackupSave", "cdecl")
    digHoloConfigBackupSave.argtypes = [c_int]
    digHoloConfigBackupSave.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1983
for _lib in _libs.values():
    if not _lib.has("digHoloConfigBackupLoad", "cdecl"):
        continue
    digHoloConfigBackupLoad = _lib.get("digHoloConfigBackupLoad", "cdecl")
    digHoloConfigBackupLoad.argtypes = [c_int]
    digHoloConfigBackupLoad.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1990
for _lib in _libs.values():
    if not _lib.has("digHoloDebugRoutine", "cdecl"):
        continue
    digHoloDebugRoutine = _lib.get("digHoloDebugRoutine", "cdecl")
    digHoloDebugRoutine.argtypes = [c_int]
    digHoloDebugRoutine.restype = None
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 2026
for _lib in _libs.values():
    if not _lib.has("digHoloFrameSimulatorCreate", "cdecl"):
        continue
    digHoloFrameSimulatorCreate = _lib.get("digHoloFrameSimulatorCreate", "cdecl")
    digHoloFrameSimulatorCreate.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_float), POINTER(c_int), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(POINTER(complex64)), POINTER(c_int), POINTER(POINTER(c_float)), POINTER(POINTER(complex64)), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(c_int), c_int, POINTER(POINTER(c_float)), POINTER(c_int), c_int, c_int, POINTER(POINTER(c_ushort)), String]
    digHoloFrameSimulatorCreate.restype = POINTER(c_float)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 2046
for _lib in _libs.values():
    if not _lib.has("digHoloFrameSimulatorCreateSimple", "cdecl"):
        continue
    digHoloFrameSimulatorCreateSimple = _lib.get("digHoloFrameSimulatorCreateSimple", "cdecl")
    digHoloFrameSimulatorCreateSimple.argtypes = [c_int, c_int, c_int, c_float, c_int, c_float, c_int]
    digHoloFrameSimulatorCreateSimple.restype = POINTER(c_float)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 2056
for _lib in _libs.values():
    if not _lib.has("digHoloFrameSimulatorDestroy", "cdecl"):
        continue
    digHoloFrameSimulatorDestroy = _lib.get("digHoloFrameSimulatorDestroy", "cdecl")
    digHoloFrameSimulatorDestroy.argtypes = [POINTER(c_float)]
    digHoloFrameSimulatorDestroy.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 2075
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetZernCoefs", "cdecl"):
        continue
    digHoloConfigGetZernCoefs = _lib.get("digHoloConfigGetZernCoefs", "cdecl")
    digHoloConfigGetZernCoefs.argtypes = [c_int]
    digHoloConfigGetZernCoefs.restype = POINTER(POINTER(c_float))
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 2084
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetZernCount", "cdecl"):
        continue
    digHoloConfigGetZernCount = _lib.get("digHoloConfigGetZernCount", "cdecl")
    digHoloConfigGetZernCount.argtypes = [c_int]
    digHoloConfigGetZernCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 171
try:
    DIGHOLO_ERROR_SUCCESS = 0
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 172
try:
    DIGHOLO_ERROR_ERROR = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 173
try:
    DIGHOLO_ERROR_INVALIDHANDLE = 2
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 174
try:
    DIGHOLO_ERROR_NULLPOINTER = 3
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 175
try:
    DIGHOLO_ERROR_SETFRAMEBUFFERDISABLED = 4
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 176
try:
    DIGHOLO_ERROR_INVALIDDIMENSION = 5
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 177
try:
    DIGHOLO_ERROR_INVALIDPOLARISATION = 6
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 178
try:
    DIGHOLO_ERROR_INVALIDAXIS = 7
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 179
try:
    DIGHOLO_ERROR_INVALIDARGUMENT = 8
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 180
try:
    DIGHOLO_ERROR_MEMORYALLOCATION = 9
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 181
try:
    DIGHOLO_ERROR_FILENOTCREATED = 10
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 182
try:
    DIGHOLO_ERROR_FILENOTFOUND = 11
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 190
try:
    DIGHOLO_UNIT_PIXEL = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 191
try:
    DIGHOLO_UNIT_LAMBDA = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 655
try:
    DIGHOLO_AVGMODE_SEQUENTIAL = 0
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 656
try:
    DIGHOLO_AVGMODE_INTERLACED = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 657
try:
    DIGHOLO_AVGMODE_SEQUENTIALSWEEP = 2
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 658
try:
    DIGHOLO_AVGMODE_COUNT = 3
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 871
try:
    DIGHOLO_WAVELENGTHORDER_INPUT = 0
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 872
try:
    DIGHOLO_WAVELENGTHORDER_OUTPUT = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 874
try:
    DIGHOLO_WAVELENGTHORDER_FAST = 0
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 875
try:
    DIGHOLO_WAVELENGTHORDER_SLOW = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 925
try:
    DIGHOLO_AUTOALIGNMODE_FULL = 0
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 926
try:
    DIGHOLO_AUTOALIGNMODE_TWEAK = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 927
try:
    DIGHOLO_AUTOALIGNMODE_ESTIMATE = 2
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 928
try:
    DIGHOLO_AUTOALIGNMODE_COUNT = 3
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1348
try:
    DIGHOLO_BASISTYPE_HG = 0
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1349
try:
    DIGHOLO_BASISTYPE_LG = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1350
try:
    DIGHOLO_BASISTYPE_CUSTOM = 2
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1363
try:
    DIGHOLO_METRIC_IL = 0
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1364
try:
    DIGHOLO_METRIC_MDL = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1365
try:
    DIGHOLO_METRIC_DIAG = 2
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1366
try:
    DIGHOLO_METRIC_SNRAVG = 3
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1367
try:
    DIGHOLO_METRIC_DIAGBEST = 4
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1368
try:
    DIGHOLO_METRIC_DIAGWORST = 5
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1369
try:
    DIGHOLO_METRIC_SNRBEST = 6
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1370
try:
    DIGHOLO_METRIC_SNRWORST = 7
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1371
try:
    DIGHOLO_METRIC_SNRMG = 8
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1372
try:
    DIGHOLO_METRIC_COUNT = 9
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1624
try:
    DIGHOLO_ANALYSIS_TOTALPOWER = 0
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1625
try:
    DIGHOLO_ANALYSIS_COMX = 1
except:
    pass

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1626
try:
    DIGHOLO_ANALYSIS_COMY = 2
except:
    pass
